Se crearon dos tests diferentes para el metodo Value